--- a/bindata/network/ovn-kubernetes/002-rbac.yaml
+++ b/bindata/network/ovn-kubernetes/002-rbac.yaml
@@ -94,19 +94,19 @@ rules:
   - patch
   - update
 
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
-metadata:
-  name: ovn-reader
-roleRef:
-  name: system:ovn-reader
-  kind: ClusterRole
-  apiGroup: rbac.authorization.k8s.io
-subjects:
-- kind: ServiceAccount
-  name: ovn
-  namespace: ovn-kubernetes
+# ---
+# apiVersion: rbac.authorization.k8s.io/v1
+# kind: ClusterRoleBinding
+# metadata:
+#   name: ovn-reader
+# roleRef:
+#   name: system:ovn-reader
+#   kind: ClusterRole
+#   apiGroup: rbac.authorization.k8s.io
+# subjects:
+# - kind: ServiceAccount
+#   name: ovn
+#   namespace: ovn-kubernetes
 
 ---
 apiVersion: rbac.authorization.k8s.io/v1
@@ -121,30 +121,3 @@ subjects:
 - kind: ServiceAccount
   name: ovn
   namespace: ovn-kubernetes
-
-  ---
-# service to expose the ovn-master pod
-# at present ovn-master is limited to a single instance so
-# when the cluster has multiple masters we can get to the
-# ovn-master via this service.
-apiVersion: v1
-kind: Service
-metadata:
-  name: ovnkube-master
-spec:
-  ports:
-  - name: north
-    port: 6641
-    protocol: TCP
-    targetPort: 6641
-  - name: south
-    port: 6642
-    protocol: TCP
-    targetPort: 6642
-  sessionAffinity: None
-  clusterIP: None
-  type: ClusterIP
-  selector:
-    name: ovnkube-master
-
-
