--- a/bindata/network/ovn-kubernetes/controller.yaml
+++ b/bindata/network/ovn-kubernetes/controller.yaml
@@ -66,5 +66,5 @@ spec:
         effect: "NoSchedule"
       volumes:
       - configMap:
-          name: ovn-controller-config
+          name: ovnkubernetes-config
         name: config
