--- a/bindata/network/openshift-sdn/sdn.yaml
+++ b/bindata/network/openshift-sdn/sdn.yaml
@@ -320,6 +320,7 @@ spec:
       {{- end}}
       nodeSelector:
         kubernetes.io/os: linux
+        migration.network.openshift.io/plugin: osdn
       volumes:
       - name: config
         configMap:
