--- a/bindata/network/ovn-kubernetes/self-hosted/004-config.yaml
+++ b/bindata/network/ovn-kubernetes/self-hosted/004-config.yaml
@@ -23,7 +23,7 @@ data:
     apiserver="{{.K8S_APISERVER}}"
     host-network-namespace="openshift-host-network"
 {{- if .OVNHybridOverlayEnable }}
-    no-hostsubnet-nodes="kubernetes.io/os=windows"
+    no-hostsubnet-nodes="migration.network.openshift.io/plugin="
 {{- end  }}
     platform-type="{{.PlatformType}}"
  
