--- a/bindata/network/ovn-kubernetes/self-hosted/ovnkube-master.yaml
+++ b/bindata/network/ovn-kubernetes/self-hosted/ovnkube-master.yaml
@@ -749,7 +749,10 @@ spec:
             source "/env/_master"
             set +o allexport
           fi
-
+{{- if .IsLiveMigration }}
+          # a knob for CNO to trigger pod restart when doing migration cleanup
+          echo "running in migration mode"
+{{- end }}
           if [ "{{.OVN_GATEWAY_MODE}}" == "shared" ]; then
             gateway_mode_flags="--gateway-mode shared --gateway-interface br-ex"
           elif [ "{{.OVN_GATEWAY_MODE}}" == "local" ]; then
