--- a/bindata/network/openshift-sdn/sdn.yaml
+++ b/bindata/network/openshift-sdn/sdn.yaml
@@ -66,7 +66,16 @@ spec:
         - |
           #!/bin/bash
           set -euo pipefail
-
+{{- if .IsLiveMigration }}
+          if ovs-vsctl br-exists br-ex; then
+            echo "br-ex exists, sleep..."
+            sleep infinity
+          else
+            echo "br-ex doesn't exist"
+          fi
+          ovs-vsctl --if-exists del-br br-int
+          ovs-vsctl --if-exists del-br br-ext
+{{- end }}
           # if another process is listening on the cni-server socket, wait until it exits
           trap 'kill $(jobs -p); rm -f /etc/cni/net.d/80-openshift-network.conf ; exit 0' TERM
           retries=0
@@ -212,7 +221,18 @@ spec:
         readinessProbe:
           exec:
             # openshift-sdn writes this file when it is ready to handle pod requests.
-            command: ["test", "-f", "/etc/cni/net.d/80-openshift-network.conf"]
+            command: 
+            - /bin/bash
+            - -c
+            - |
+              #!/bin/bash
+              set -euo pipefail
+{{- if .IsLiveMigration }}
+              if ovs-vsctl br-exists br-ex; then
+                exit 0
+              fi
+{{- end}}
+              test -f /etc/cni/net.d/80-openshift-network.conf
           initialDelaySeconds: 5
           periodSeconds: 5
       - name: kube-rbac-proxy
